[egg_info]
tag_build=.dev
tag_date=1

[nosetests]

attr = !known_issue,!slow,!non_core,!manual,!performancetest
verbosity = 2
#with-doctest = 1

[options.entry_points]
console_scripts =
  rdfsparqlapp = rdflib_web.endpoint:main
  rdflodapp = rdflib_web.lod:main
rdf.plugins.serializer =
  html = rdflib_web.htmlresults:HTMLSerializer
rdf.plugins.resultserializer =
  html = rdflib_web.htmlresults:HTMLResultSerializer
